--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 
-*.xcodeproj/project.xcworkspace/*
-*.xcodeproj/xcuserdata/*
+supports/*.xcodeproj/project.xcworkspace/*
+supports/*.xcodeproj/xcuserdata/*
 build
